apps/base/littlelink/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: littlelink
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: littlelink
