apps/base/littlelink/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: website-secure
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host("links.philipkrueck.com")
      services:
        - name: website
          port: 3000
  tls:
    secretName: website-crt
